fix body layout on mobile

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -20,7 +20,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  width: 100vw;
 
   /* https://ilxanlar.medium.com/you-shouldnt-rely-on-css-100vh-and-here-s-why-1b4721e74487 */
   min-height: fill-available;
